# MD-TODOs

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: index.html  proposed-solution.md  theory-of-operation.md
scripts/: install.sh  uninstall.sh
skills/: gtd.md  implicit_todo_detection.md
src/: __init__.py
src/ai/: __init__.py  factory.py  keychain.py  openai_provider.py  provider.py  retry.py
src/cli/: main.py
src/common/: __init__.py  config.py  config_models.py  logging.py  skills.py  store.py  todo_models.py
src/extractor/: __init__.py  agent.py  ai_detector.py  diff.py  file_parser.py  regex_detector.py  watcher.py
src/manager/: __init__.py  agent.py  plan_writer.py  prompt_builder.py
templates/: com.md-todos.extractor.plist  com.md-todos.manager.plist  config.example.yaml
tests/: conftest.py  test_ai_detector.py  test_ai_provider.py  test_cli.py  test_config.py  test_diff.py  test_extractor_agent.py  test_factory.py  test_file_parser.py  test_integration_ai.py  test_keychain.py  test_logging.py  test_manager_agent.py  test_openai_provider.py  test_plan_writer.py  test_prompt_builder.py  test_regex_detector.py  test_retry.py  test_skills.py  test_store.py  test_watcher.py
