[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "md-todos"
version = "0.1.0"
description = "AI-powered TODO extraction and GTD planning from Markdown notes"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Taylor L. Riché" },
]

dependencies = [
    "click>=8.1",
    "keyring>=25.0",
    "markdown-it-py>=3.0",
    "openai>=1.0",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
md-todos = "src.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff.format]
quote-style = "double"
